k8s/istio/gateway/app/istio.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: go-demo-8
spec:
  hosts:
  - go-demo-8.cluster.prageethw.co
  - go-demo-7 # internal comms
  gateways:
  - go-demo-7
  http:
  - match:
    - uri:
        prefix: /
    route:
    - destination:
        host: go-demo-7
        port:
          number: 80
---
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: go-demo-7
spec:
  selector:
    istio: ingressgateway
  servers:
  - port:
      number: 80
      name: http-go-demo-7
      protocol: HTTP
    hosts:
    - go-demo-7.cluster.prageethw.co
    - go-demo-8.cluster.prageethw.co
    tls:
      httpsRedirect: true
  - port:
      number: 443
      name: https-go-demo-7
      protocol: HTTP #need to set this as http to enable elb ssl offloading.   
    hosts:
    - go-demo-7.cluster.prageethw.co
    - go-demo-8.cluster.prageethw.co
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: go-demo-7
spec:
  hosts:
  - go-demo-7.cluster.prageethw.co
  - go-demo-7 # internal comms
  gateways:
  - go-demo-7
  http:
  - match:
    - uri:
        prefix: /
    route:
    - destination:
        host: go-demo-7
        port:
          number: 80
